--- a/horabella/Base.lproj/Main.storyboard
+++ b/horabella/Base.lproj/Main.storyboard
@@ -735,7 +735,7 @@
             <objects>
                 <tableViewController id="DpF-uD-Kxl" customClass="HBSalonDetailTableViewController" customModule="horabella" customModuleProvider="target" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" allowsSelection="NO" rowHeight="213" sectionHeaderHeight="28" sectionFooterHeight="28" id="spv-U2-07e">
-                        <rect key="frame" x="0.0" y="0.0" width="600" height="1000"/>
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="1200"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <animations/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
@@ -1074,6 +1074,72 @@ sofnaof</string>
                                     <outlet property="infoType" destination="biF-qo-jaA" id="IHL-V7-dgW"/>
                                 </connections>
                             </tableViewCell>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="servicesCell" rowHeight="90" id="X2D-S5-ldb" customClass="HBServicesTableViewCell" customModule="horabella" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="832" width="600" height="90"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="X2D-S5-ldb" id="SlJ-il-sam">
+                                    <rect key="frame" x="0.0" y="0.0" width="600" height="90"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="GeM-J9-fDE">
+                                            <rect key="frame" x="0.0" y="0.0" width="600" height="90"/>
+                                            <animations/>
+                                            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                            <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" minimumLineSpacing="10" minimumInteritemSpacing="10" id="eWx-bB-IuO">
+                                                <size key="itemSize" width="83" height="71"/>
+                                                <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                                <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                                <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                            </collectionViewFlowLayout>
+                                            <cells>
+                                                <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="serviceCell" id="LMY-iF-up4" customClass="HBServiceCollectionViewCell" customModule="horabella" customModuleProvider="target">
+                                                    <rect key="frame" x="0.0" y="0.0" width="90" height="90"/>
+                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                    <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
+                                                        <rect key="frame" x="0.0" y="0.0" width="90" height="90"/>
+                                                        <autoresizingMask key="autoresizingMask"/>
+                                                        <subviews>
+                                                            <imageView userInteractionEnabled="NO" contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="filtro_cabeloON" translatesAutoresizingMaskIntoConstraints="NO" id="jV3-uc-fuF">
+                                                                <rect key="frame" x="0.0" y="0.0" width="90" height="90"/>
+                                                                <animations/>
+                                                            </imageView>
+                                                        </subviews>
+                                                        <animations/>
+                                                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                                    </view>
+                                                    <animations/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="trailing" secondItem="jV3-uc-fuF" secondAttribute="trailing" id="2vg-Sb-VUP"/>
+                                                        <constraint firstItem="jV3-uc-fuF" firstAttribute="leading" secondItem="LMY-iF-up4" secondAttribute="leading" id="Kln-CU-bf9"/>
+                                                        <constraint firstAttribute="bottom" secondItem="jV3-uc-fuF" secondAttribute="bottom" id="NkH-rK-7jR"/>
+                                                        <constraint firstItem="jV3-uc-fuF" firstAttribute="top" secondItem="LMY-iF-up4" secondAttribute="top" id="ty3-u7-76c"/>
+                                                    </constraints>
+                                                    <size key="customSize" width="90" height="90"/>
+                                                    <connections>
+                                                        <outlet property="image" destination="jV3-uc-fuF" id="Yio-OK-bJJ"/>
+                                                    </connections>
+                                                </collectionViewCell>
+                                            </cells>
+                                            <connections>
+                                                <outlet property="dataSource" destination="X2D-S5-ldb" id="4gf-qp-zs7"/>
+                                                <outlet property="delegate" destination="X2D-S5-ldb" id="wrc-OX-6qm"/>
+                                            </connections>
+                                        </collectionView>
+                                    </subviews>
+                                    <animations/>
+                                    <constraints>
+                                        <constraint firstAttribute="bottom" secondItem="GeM-J9-fDE" secondAttribute="bottom" id="4M0-rK-bgm"/>
+                                        <constraint firstItem="GeM-J9-fDE" firstAttribute="top" secondItem="SlJ-il-sam" secondAttribute="top" id="JRN-ZS-ABf"/>
+                                        <constraint firstAttribute="trailing" secondItem="GeM-J9-fDE" secondAttribute="trailing" id="PGo-aj-ahD"/>
+                                        <constraint firstItem="GeM-J9-fDE" firstAttribute="leading" secondItem="SlJ-il-sam" secondAttribute="leading" id="oU9-b1-43Q"/>
+                                    </constraints>
+                                </tableViewCellContentView>
+                                <animations/>
+                                <color key="backgroundColor" red="0.1450980392" green="0.050980392159999999" blue="0.1529411765" alpha="1" colorSpace="calibratedRGB"/>
+                                <connections>
+                                    <outlet property="collectionView" destination="GeM-J9-fDE" id="K7u-vK-k0d"/>
+                                </connections>
+                            </tableViewCell>
                         </prototypes>
                         <connections>
                             <outlet property="dataSource" destination="DpF-uD-Kxl" id="lFb-S6-iYX"/>
@@ -1081,7 +1147,7 @@ sofnaof</string>
                         </connections>
                     </tableView>
                     <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
-                    <size key="freeformSize" width="600" height="1000"/>
+                    <size key="freeformSize" width="600" height="1200"/>
                     <connections>
                         <outlet property="pageControl" destination="lDx-e7-mPr" id="B0W-uI-VuR"/>
                         <outlet property="picturesScrollView" destination="hJa-hg-66j" id="cyK-LU-PXE"/>
