--- a/horabella/Base.lproj/Main.storyboard
+++ b/horabella/Base.lproj/Main.storyboard
@@ -403,7 +403,7 @@
                                         <rect key="frame" x="0.0" y="429" width="600" height="44"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="8iS-pE-nvF" id="WiU-yB-zmz">
-                                            <rect key="frame" x="0.0" y="0.0" width="567" height="43.5"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="567" height="44"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="251" text="Histórico" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9ib-Yf-mcn">
@@ -743,9 +743,12 @@
                             <rect key="frame" x="0.0" y="64" width="600" height="293"/>
                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             <subviews>
-                                <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="hJa-hg-66j">
+                                <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" pagingEnabled="YES" translatesAutoresizingMaskIntoConstraints="NO" id="hJa-hg-66j">
                                     <rect key="frame" x="0.0" y="0.0" width="600" height="249"/>
                                     <animations/>
+                                    <connections>
+                                        <outlet property="delegate" destination="DpF-uD-Kxl" id="089-IZ-gyZ"/>
+                                    </connections>
                                 </scrollView>
                                 <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="35w-AN-yU8">
                                     <rect key="frame" x="10" y="257" width="580" height="29"/>
@@ -828,20 +831,20 @@
                                             <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                             <nil key="highlightedColor"/>
                                         </label>
-                                        <imageView userInteractionEnabled="NO" contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="commentPinkIcon" translatesAutoresizingMaskIntoConstraints="NO" id="4G0-A5-j1M">
-                                            <rect key="frame" x="470" y="21" width="35" height="35"/>
+                                        <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="commentPinkIcon" translatesAutoresizingMaskIntoConstraints="NO" id="4G0-A5-j1M">
+                                            <rect key="frame" x="478" y="31" width="27" height="15"/>
                                             <animations/>
                                             <constraints>
-                                                <constraint firstAttribute="height" constant="35" id="dSb-fU-eFB"/>
-                                                <constraint firstAttribute="width" constant="35" id="wmf-0u-eRA"/>
+                                                <constraint firstAttribute="height" constant="15" id="dSb-fU-eFB"/>
+                                                <constraint firstAttribute="width" constant="27" id="wmf-0u-eRA"/>
                                             </constraints>
                                         </imageView>
-                                        <imageView userInteractionEnabled="NO" contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="favoritePinkIcon" translatesAutoresizingMaskIntoConstraints="NO" id="0Xe-kX-YuY">
-                                            <rect key="frame" x="234" y="21" width="35" height="35"/>
+                                        <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="favoritePinkIcon" translatesAutoresizingMaskIntoConstraints="NO" id="0Xe-kX-YuY">
+                                            <rect key="frame" x="244" y="31" width="25" height="15"/>
                                             <animations/>
                                             <constraints>
-                                                <constraint firstAttribute="height" constant="35" id="NGx-qh-zHI"/>
-                                                <constraint firstAttribute="width" constant="35" id="bQO-Zh-iCX"/>
+                                                <constraint firstAttribute="height" constant="15" id="NGx-qh-zHI"/>
+                                                <constraint firstAttribute="width" constant="25" id="bQO-Zh-iCX"/>
                                             </constraints>
                                         </imageView>
                                     </subviews>
@@ -993,7 +996,7 @@
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Nome do salao" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="pup-gd-ADh">
-                                            <rect key="frame" x="18" y="18" width="564" height="21"/>
+                                            <rect key="frame" x="18" y="8" width="564" height="21"/>
                                             <animations/>
                                             <constraints>
                                                 <constraint firstAttribute="height" constant="21" id="6Me-dp-1Mh"/>
@@ -1003,7 +1006,7 @@
                                             <nil key="highlightedColor"/>
                                         </label>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="3" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="66L-p5-3cj">
-                                            <rect key="frame" x="18" y="47" width="564" height="77"/>
+                                            <rect key="frame" x="18" y="37" width="564" height="95"/>
                                             <animations/>
                                             <string key="text">Descriçao do salao
 idaijd
@@ -1016,11 +1019,11 @@ sofnaof</string>
                                     <animations/>
                                     <constraints>
                                         <constraint firstAttribute="trailingMargin" secondItem="66L-p5-3cj" secondAttribute="trailing" constant="10" id="716-Pz-ufA"/>
-                                        <constraint firstAttribute="bottomMargin" secondItem="66L-p5-3cj" secondAttribute="bottom" constant="8" id="DGL-Jb-NB2"/>
+                                        <constraint firstAttribute="bottomMargin" secondItem="66L-p5-3cj" secondAttribute="bottom" id="DGL-Jb-NB2"/>
                                         <constraint firstAttribute="trailingMargin" secondItem="pup-gd-ADh" secondAttribute="trailing" constant="10" id="TXB-Mo-Bm1"/>
                                         <constraint firstItem="pup-gd-ADh" firstAttribute="leading" secondItem="Cj4-ip-sB6" secondAttribute="leadingMargin" constant="10" id="mOW-Bi-rna"/>
                                         <constraint firstItem="66L-p5-3cj" firstAttribute="top" secondItem="pup-gd-ADh" secondAttribute="bottom" constant="8" id="nv6-vm-J6b"/>
-                                        <constraint firstItem="pup-gd-ADh" firstAttribute="top" secondItem="Cj4-ip-sB6" secondAttribute="topMargin" constant="10" id="oO3-7t-lh9"/>
+                                        <constraint firstItem="pup-gd-ADh" firstAttribute="top" secondItem="Cj4-ip-sB6" secondAttribute="topMargin" id="oO3-7t-lh9"/>
                                         <constraint firstItem="66L-p5-3cj" firstAttribute="leading" secondItem="Cj4-ip-sB6" secondAttribute="leadingMargin" constant="10" id="zBo-fn-ziH"/>
                                     </constraints>
                                 </tableViewCellContentView>
@@ -1074,33 +1077,33 @@ sofnaof</string>
                                     <outlet property="infoType" destination="biF-qo-jaA" id="IHL-V7-dgW"/>
                                 </connections>
                             </tableViewCell>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="servicesCell" rowHeight="90" id="X2D-S5-ldb" customClass="HBServicesTableViewCell" customModule="horabella" customModuleProvider="target">
-                                <rect key="frame" x="0.0" y="832" width="600" height="90"/>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="servicesCell" rowHeight="70" id="X2D-S5-ldb" customClass="HBServicesTableViewCell" customModule="horabella" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="832" width="600" height="70"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="X2D-S5-ldb" id="SlJ-il-sam">
-                                    <rect key="frame" x="0.0" y="0.0" width="600" height="90"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="600" height="70"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
                                         <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="GeM-J9-fDE">
-                                            <rect key="frame" x="0.0" y="0.0" width="600" height="90"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="600" height="70"/>
                                             <animations/>
                                             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                             <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" minimumLineSpacing="10" minimumInteritemSpacing="10" id="eWx-bB-IuO">
-                                                <size key="itemSize" width="83" height="71"/>
+                                                <size key="itemSize" width="56" height="61"/>
                                                 <size key="headerReferenceSize" width="0.0" height="0.0"/>
                                                 <size key="footerReferenceSize" width="0.0" height="0.0"/>
                                                 <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                                             </collectionViewFlowLayout>
                                             <cells>
                                                 <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="serviceCell" id="LMY-iF-up4" customClass="HBServiceCollectionViewCell" customModule="horabella" customModuleProvider="target">
-                                                    <rect key="frame" x="0.0" y="0.0" width="90" height="90"/>
+                                                    <rect key="frame" x="0.0" y="5" width="56" height="61"/>
                                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                     <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                                                        <rect key="frame" x="0.0" y="0.0" width="90" height="90"/>
+                                                        <rect key="frame" x="0.0" y="0.0" width="56" height="61"/>
                                                         <autoresizingMask key="autoresizingMask"/>
                                                         <subviews>
                                                             <imageView userInteractionEnabled="NO" contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="filtro_cabeloON" translatesAutoresizingMaskIntoConstraints="NO" id="jV3-uc-fuF">
-                                                                <rect key="frame" x="0.0" y="0.0" width="90" height="90"/>
+                                                                <rect key="frame" x="0.0" y="0.0" width="56" height="61"/>
                                                                 <animations/>
                                                             </imageView>
                                                         </subviews>
@@ -1114,7 +1117,6 @@ sofnaof</string>
                                                         <constraint firstAttribute="bottom" secondItem="jV3-uc-fuF" secondAttribute="bottom" id="NkH-rK-7jR"/>
                                                         <constraint firstItem="jV3-uc-fuF" firstAttribute="top" secondItem="LMY-iF-up4" secondAttribute="top" id="ty3-u7-76c"/>
                                                     </constraints>
-                                                    <size key="customSize" width="90" height="90"/>
                                                     <connections>
                                                         <outlet property="image" destination="jV3-uc-fuF" id="Yio-OK-bJJ"/>
                                                     </connections>
@@ -1156,7 +1158,7 @@ sofnaof</string>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="6wH-I0-gVn" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2450" y="-5"/>
+            <point key="canvasLocation" x="2450" y="96"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="TQy-km-DnK">
