--- a/horabella/Base.lproj/Main.storyboard
+++ b/horabella/Base.lproj/Main.storyboard
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9059" systemVersion="15B42" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="5H8-H4-MlW">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9060" systemVersion="15B42" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="5H8-H4-MlW">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9049"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9051"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
@@ -114,7 +114,8 @@
                                                 <constraint firstAttribute="height" constant="50" id="iG5-Sf-oy6"/>
                                                 <constraint firstAttribute="width" constant="50" id="oeZ-G9-i3k"/>
                                             </constraints>
-                                            <state key="normal" image="favorite_on"/>
+                                            <state key="normal" image="favorite_off"/>
+                                            <state key="selected" image="favorite_on"/>
                                             <userDefinedRuntimeAttributes>
                                                 <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
                                                     <integer key="value" value="25"/>
@@ -156,7 +157,9 @@
                                 <color key="backgroundColor" red="0.91394412878787878" green="0.91394412878787878" blue="0.91394412878787878" alpha="1" colorSpace="calibratedRGB"/>
                                 <connections>
                                     <outlet property="salonAddress" destination="0vu-08-6rh" id="haS-Cx-Qpy"/>
+                                    <outlet property="salonDistance" destination="TXH-KF-7H0" id="UkH-zD-68h"/>
                                     <outlet property="salonEvaluation" destination="7px-mw-kDY" id="piC-TO-fZx"/>
+                                    <outlet property="salonFavorite" destination="ZYL-lb-RUN" id="IEl-9R-Swq"/>
                                     <outlet property="salonImage" destination="K2I-2K-N23" id="rRN-Ut-tRi"/>
                                     <outlet property="salonName" destination="S52-T1-cH9" id="oHB-xD-JHD"/>
                                     <segue destination="DpF-uD-Kxl" kind="show" id="Sob-Oa-fqK"/>
@@ -1247,6 +1250,7 @@ sofnaof</string>
         <image name="dealsTab_off" width="27" height="28"/>
         <image name="dealsTab_on" width="30" height="31"/>
         <image name="favoritePinkIcon" width="30" height="26"/>
+        <image name="favorite_off" width="24" height="21"/>
         <image name="favorite_on" width="24" height="21"/>
         <image name="filtro_cabeloON" width="42" height="60"/>
         <image name="profileNoPicture" width="123" height="123"/>
